fix: 헤더가 다른 요소에 가리지 않도록 z-index 상향

--- a/src/widgets/layout/ui/Header.module.scss
+++ b/src/widgets/layout/ui/Header.module.scss
@@ -1,6 +1,6 @@
 .container {
   position: sticky;
-  z-index: 3;
+  z-index: 100;
   top: 0;
 
   border-bottom: 1px solid var(--brand-color-border-default);
